--- a/css/bootstrap.slim.css
+++ b/css/bootstrap.slim.css
@@ -1358,6 +1358,18 @@ button.bg-info:hover {
   display: inline-block !important
 }
 
+.d-inline-table {
+  display: inline-table !important
+}
+
+.d-contents {
+  display: contents !important
+}
+
+.d-flex {
+  display: flex !important
+}
+
 .d-block {
   display: block !important
 }
@@ -1595,6 +1607,10 @@ button.bg-info:hover {
   height: auto !important
 }
 
+.mh-100 {
+  max-height: 100% !important
+}
+
 .m-0 {
   margin: 0 !important
 }
@@ -1752,11 +1768,13 @@ button.bg-info:hover {
 }
 
 .px-1 {
-  padding-right: .25rem !important
+  padding-right: .25rem !important;
+  padding-left: .25rem !important
 }
 
-.px-1 {
-  padding-left: .25rem !important
+.py-1 {
+  padding-top: .25rem !important;
+  padding-bottom: .25rem !important
 }
 
 .p-2 {
@@ -1768,11 +1786,13 @@ button.bg-info:hover {
 }
 
 .px-2 {
-  padding-right: .5rem !important
+  padding-right: .5rem !important;
+  padding-left: .5rem !important
 }
 
-.px-2 {
-  padding-left: .5rem !important
+.py-2 {
+  padding-top: .5rem !important;
+  padding-bottom: .5rem !important
 }
 
 .p-3 {
@@ -1784,11 +1804,13 @@ button.bg-info:hover {
 }
 
 .px-3 {
-  padding-right: 1rem !important
+  padding-right: 1rem !important;
+  padding-left: 1rem !important
 }
 
-.px-3 {
-  padding-left: 1rem !important
+.py-3 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important
 }
 
 .p-4 {
@@ -1800,11 +1822,13 @@ button.bg-info:hover {
 }
 
 .px-4 {
-  padding-right: 1.5rem !important
+  padding-right: 1.5rem !important;
+  padding-left: 1.5rem !important
 }
 
-.px-4 {
-  padding-left: 1.5rem !important
+.py-4 {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important
 }
 
 .p-5 {
@@ -1816,11 +1840,13 @@ button.bg-info:hover {
 }
 
 .px-5 {
-  padding-right: 3rem !important
+  padding-right: 3rem !important;
+  padding-left: 3rem !important
 }
 
-.px-5 {
-  padding-left: 3rem !important
+.py-5 {
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important
 }
 
 .m-auto {
@@ -2944,6 +2970,20 @@ img {
 
 .img-circle {
   border-radius: 50%
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.img-thumbnail {
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  max-width: 100%;
+  height: auto;
 }
 
 [role=button] {
