--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,7 @@ span.video-text i {
 
 .about,
 .contact,
+.events,
 .footer,
 .reasons-agileits-w3layouts,
 .services,
@@ -648,6 +649,91 @@ a.read-agileits:hover {
   text-align: center
 }
 
+.latest-item.large-item {
+  /* min-height: 550px; */
+  margin-right: 15px;
+  margin-left: 0;
+}
+
+.latest-item {
+  /* min-height: 255px; */
+  position: relative;
+  margin-bottom: 40px;
+  margin-left: 15px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 30px rgb(79 84 139 / 30%);
+  box-shadow: 0 0 30px rgb(79 84 139 / 30%);
+}
+
+.latest-item.large-item .li-tag {
+  left: 40px;
+  top: 40px;
+}
+
+.latest-item .li-tag {
+  font-size: 14px;
+  color: #fff;
+  display: inline-block;
+  padding: 5px 18px;
+  border-radius: 2px;
+  position: absolute;
+  left: 30px;
+  top: 30px;
+  background-image: linear-gradient(120deg, var(--light-blue) 0%, var(--blue) 100%),
+                    linear-gradient(120deg, var(--light-blue) 0%, var(--blue) 100%);
+}
+
+.latest-item.large-item .li-text {
+  padding: 0 40px;
+  bottom: 35px;
+}
+
+.latest-item.large-item .li-text h5 {
+  font-size: 120%;
+  margin-bottom: 17px;
+  line-height: 25px;
+}
+
+.latest-item .li-text {
+  position: absolute;
+  left: 0;
+  bottom: 26px;
+  width: 100%;
+  padding: 0 30px;
+}
+
+.latest-item .li-text h5 {
+  margin-bottom: 5px;
+  color: var(--white);
+  font-weight: 600;
+  line-height: 20px;
+  text-shadow: 1.4px 1.4px 1px var(--black);
+}
+
+.latest-item.large-item .li-text span {
+  font-size: 16px;
+}
+
+.latest-item .li-text span {
+  font-size: 14px;
+  color: var(--white);
+  text-shadow: 1.4px 1.4px 1px var(--black);
+}
+
+.latest-item .li-text span i {
+  color: var(--yellow);
+}
+
+.set-bg {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover
+}
+
 .agileinfo_copyright p {
   color: gray !important;
   font-size: 11px;
@@ -857,6 +943,16 @@ a.read-agileits:hover {
     margin-top: 0;
     width: 100%;
     float: none
+  }
+
+  .latest-item.large-item {
+    /* height: 550px; */
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .latest-item {
+    margin-left: 0;
   }
 
   .resp-tabs-list li {
